2002-12-09  Tim Legant  <tim@catseye.net>

	* Pending.py (Queue.__init__): Saved value of dispose as
	self.dispose and not self.dispose_def.  self.dispose_def is only
	used interactively and so belongs in InteractiveQueue.

	(Queue.initQueue): Removed re-initialization of self.dispose_def.

	(Queue.checkDelivered): Changed 'delete' compare from
	self.dispose_def to self.dispose.

	(Queue.disposeMessage): Return 0 now on both self.dispose is None
	and self.dispose == 'pass'.  self.pretend is not relevant for
	either of these tests.

	(Queue.showMessage): Summary was getting printed when both
	self.summary and self.terse were false.  Changed 'or not
	self.terse' to 'and not self.terse'.

	(Queue.mainLoop): Removed setting of self.dispose from
	self.dispose_def.  This should only happen interactively and does
	in InteractiveQueue.userInput.

	(InteractiveQueue.initQueue): New method.  Initialize
	self.dispose_def here.

	(InteractiveQueue.processMessage): Print blank line if interactive
	and self.terse is true.

2002-12-06  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>

	* Defaults.py (CGI_URL): New variable.

2002-12-02  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>

	* Defaults.py (GLOBAL_TMDARC): Don't skip if there is an error.
	
2002-11-25  David Guerizec  <david@guerizec.net>

	* Pending.py: new module

2002-11-21  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>

	* Defaults.py: Removed DELIVERED_CACHE and DELIVERED_CACHE_LEN.
	
2002-11-12  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>

	* Util.py (confirm_append_address): New function.

	* MessageLogger.py (MessageLogger.write): Log X-Primary-Address.

	* Defaults.py (PRIMARY_ADDRESS_MATCH): New variable.

2002-11-10  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>

	* Util.py (build_cdb): Uniquify ftmp when doing cdbmake.

2002-11-08  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>

	* Defaults.py (SUMMARY_HEADERS): New variable.
