@@ -4,7 +4,7 @@
 """A package for parsing, handling, and generating email messages.
 """
 
-__version__ = '2.4.3'
+__version__ = '2.5a1'
 
 __all__ = [
     'base64MIME',
